# discord-data-package-analysis

./: .gitignore  LICENSE  README.md  count-discord-mesages.py  libmarkov.py  markov.py  pyproject.toml
Messages/: README.md
